# pdf-parser

./: .gitignore  README.md  dvc.yaml  pyproject.toml
docs/: architecture.ipynb
notebook/: extract_table.py
notebooks/: data_load.ipynb  docling_extraction.ipynb  layout_extraction.ipynb  layoutlmv3.ipynb  simple_text_extractor.ipynb  table_extraction.ipynb  tabula_extraction.ipynb
src/pdf_parser/: _docling.py  _structures.py  download_stage.py  export_stage.py  layout.py  markdown_exporter.py  parser.py
