[project]
name = "pdf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "sec-api>=1.0.32",
    "sec-edgar-downloader>=5.0.3",
    "transformers>=4.56.2",
]
