[project]
name = "pdf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py[cv]>=1.0.9",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "sec-api>=1.0.32",
    "sec-edgar-downloader>=5.0.3",
    "tabula-py>=2.10.0",
    "transformers>=4.56.2",
]
